--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </h1>
         <button class="btn">ORDER NOW</button>
 
-        <img class="img-main" src="/hero-banner-2.webp" alt="">
+        <img class="img-main" src="hero-banner-2.webp" alt="">
     </div>
     <div class="s-main">
         <div class="recharge">
