--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="menu_bar">
 
-        <a class="logo" href=""><img src="/logo-airtel.png" alt=""></a>
+        <a class="logo" href=""><img src="./logo-airtel.png" alt=""></a>
 
 
 
