--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </h1>
         <button class="btn">ORDER NOW</button>
 
-        <img class="img-main" src="hero-banner-2.webp" alt="">
+        <img class="img-main" src="./hero-banner-2.webp" alt="">
     </div>
     <div class="s-main">
         <div class="recharge">
@@ -125,7 +125,7 @@
 
     </div>
     <div class="ofr-bar">
-        <a href=""><img class="ofr-img" src="/offer-icon.webp" alt=""></a>
+        <a href=""><img class="ofr-img" src="./offer-icon.webp" alt=""></a>
         <h5>Free 2 GB data coupons on select recharges via Thanks app</h5>
         <button class="ofr-btn">GET APP</button>
     </div>
@@ -162,7 +162,7 @@
 
         </div>
         <div class="sw-airtel">
-            <img style="height: 50px ; width: 50px;" src="/switch-to-airtel-web.png" alt="">
+            <img style="height: 50px ; width: 50px;" src="./switch-to-airtel-web.png" alt="">
             <a href="">Switch to airtel <br><span>Select a plan & order SIM • Get SIM home-delivered</span></a>
             <button class="sw-airtel-btn">GET STARTED</button>
 
@@ -175,7 +175,7 @@
         <div class="rfu-main-box">
             <div class="rec-fu-box1">
                 <div class="img-box1">
-                    <img src="/recommendations-slide-1.jpeg" alt="">
+                    <img src="./recommendations-slide-1.jpeg" alt="">
                 </div>
                 <div class="img-box2">
                     <p style="color: red;margin-top: 20px; margin-right: 70%;font-size: 13px;">FIBER</p>
@@ -193,7 +193,7 @@
             </div>
             <div class="rec-fu-box2">
                 <div class="img-box1">
-                    <img src="/recommendations-slide-2.webp" alt="">
+                    <img src="./recommendations-slide-2.webp" alt="">
                 </div>
                 <div class="img-box2">
                     <p style="color: red;margin-top: 10px; margin-right: 60%;font-size: 13px;">POSTPAID</p>
@@ -211,7 +211,7 @@
             </div>
             <div class="rec-fu-box3">
                 <div class="img-box1">
-                    <img src="/recommendations-slide-3.jpeg" alt="">
+                    <img src="./recommendations-slide-3.jpeg" alt="">
                 </div>
                 <div class="img-box2">
                     <p style="color: red;margin-top: 10px; margin-right: 65%;font-size: 13px;">PREPAID</p>
@@ -270,7 +270,7 @@
         </div>
         <div class="footer-bdy-box">
             <div class="footer-bdy-box1">
-                <img style="width: 40px;" src="/b2b-airtel-office-internet.svg" alt="">
+                <img style="width: 40px;" src="./b2b-airtel-office-internet.svg" alt="">
                 <div class="ftr-bdy-txt">
                     <a style="text-decoration: none;color: black;margin-left: 15px; font-weight: bold;" href="">Airtel Office Internet <span style="color: #027bfc;font-size: 25px;">→</span></a>
                     
@@ -279,7 +279,7 @@
 
             </div>
             <div class="footer-bdy-box2">
-                <img style="width: 40px;" src="/b2b-mobile.svg" alt="">
+                <img style="width: 40px;" src="./b2b-mobile.svg" alt="">
                 <div class="ftr-bdy-txt">
                     <a style="text-decoration: none;color: black;margin-left: 15px; font-weight: bold;" href="">Airtel Corporate Postpaid <span style="color: #027bfc;font-size: 25px;">→</span></a>
 
@@ -288,7 +288,7 @@
 
             </div>
             <div class="footer-bdy-box3">
-                <img style="width: 40px;" src="/b2b-airtel-iq.svg" alt="">
+                <img style="width: 40px;" src="./b2b-airtel-iq.svg" alt="">
                 <div class="ftr-bdy-txt">
                     <a style="text-decoration: none;color: black;margin-left: 15px; font-weight: bold;" href="">Airtel IQ <span style="color: #027bfc;font-size: 25px;">→</span></a>
                 </div>
